tests/diagnostics/expressions/unary/not_operand_not_boolean/expect.txt
# exit: 1
lib.coppice:2:16: error: not operator requires boolean operand
      return not 1
                 ^
